# GaramonAndDG

./: CMakeLists.txt
data/: geogebra_c3ga_template.html
modules/: FindC2GA.cmake
src/: Directory.cpp  Directory.hpp  Entry.cpp  Entry.hpp  Geogebra_c2ga.cpp  Geogebra_c2ga.hpp  c2gaTools.hpp  main.cpp
test/: help.txt  test2.html  text3.html
